--- a/modules/postgres/17.4/presubmit.yml
+++ b/modules/postgres/17.4/presubmit.yml
@@ -1,19 +1,12 @@
-matrix:
-  platform:
-  - debian10
-  - ubuntu2004
-  - macos
-  - macos_arm64
-  - windows
-  bazel:
-  - 8.x
-  - 7.x
-  - 6.x
-tasks:
-  verify_targets:
-    name: Verify build targets
-    platform: ${{ platform }}
-    bazel: ${{ bazel }}
-    build_targets:
-    - '@postgrespq'
-    - '@postgreslibpq'
+bcr_test_module:
+  module_path: ""
+  matrix:
+    platform: ["macos_arm64", "ubuntu2004"]
+    bazel: ["7.x", "8.x"]
+  tasks:
+    run_tests:
+      name: "Run test module"
+      platform: ${{ platform }}
+      bazel: ${{ bazel }}
+      build_targets:
+      - //...
