--- a/modules/postgres/17.4/MODULE.bazel
+++ b/modules/postgres/17.4/MODULE.bazel
@@ -1,5 +1,11 @@
+"""https://www.postgresql.org/"""
+
 module(
     name = "postgres",
     version = "17.4",
     compatibility_level = 0,
 )
+
+bazel_dep(name = "rules_cc", version = "0.1.1")
+bazel_dep(name = "platforms", version = "0.0.11")
+bazel_dep(name = "bazel_skylib", version = "1.7.1")
