--- a/modules/postgres/17.4/overlay/BUILD.bazel
+++ b/modules/postgres/17.4/overlay/BUILD.bazel
@@ -4,11 +4,11 @@ load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
 load("@bazel_skylib//rules:write_file.bzl", "write_file")
 load("@rules_cc//cc:defs.bzl", "cc_library")
 
-PG_VERSION_NUM = "160002"
+PG_VERSION_NUM = "170004"
 
-PG_MAJORVERSION_NUM = "16"
+PG_MAJORVERSION_NUM = "17"
 
-PG_MINORVERSION_NUM = "2"
+PG_MINORVERSION_NUM = "4"
 
 PG_VERSION = "{}.{}".format(PG_MAJORVERSION_NUM, PG_MINORVERSION_NUM)
 
@@ -106,10 +106,6 @@ write_file(
 /* Define to 1 if you want National Language Support. (--enable-nls) */
 /* #undef ENABLE_NLS */
 
-/* Define to 1 to build client libraries as thread-safe code.
-   (--enable-thread-safety) */
-#define ENABLE_THREAD_SAFETY 1
-
 /* Define to 1 if you have the `append_history' function. */
 /* #undef HAVE_APPEND_HISTORY */
 
@@ -170,18 +166,6 @@ write_file(
 /* Define to 1 if you have the declaration of
    `LLVMCreatePerfJITEventListener', and to 0 if you don't. */
 /* #undef HAVE_DECL_LLVMCREATEPERFJITEVENTLISTENER */
-
-/* Define to 1 if you have the declaration of `LLVMGetHostCPUFeatures', and to
-   0 if you don't. */
-/* #undef HAVE_DECL_LLVMGETHOSTCPUFEATURES */
-
-/* Define to 1 if you have the declaration of `LLVMGetHostCPUName', and to 0
-   if you don't. */
-/* #undef HAVE_DECL_LLVMGETHOSTCPUNAME */
-
-/* Define to 1 if you have the declaration of `LLVMOrcGetSymbolAddressIn', and
-   to 0 if you don't. */
-/* #undef HAVE_DECL_LLVMORCGETSYMBOLADDRESSIN */
 
 /* Define to 1 if you have the declaration of `posix_fadvise', and to 0 if you
    don't. */
@@ -382,9 +366,6 @@ write_file(
 
 /* Define to 1 if you have the `zstd' library (-lzstd). */
 /* #undef HAVE_LIBZSTD */
-
-/* Define to 1 if the system has the type `locale_t'. */
-#define HAVE_LOCALE_T 1
 
 /* Define to 1 if `long int' works and is 64 bits. */
 #define HAVE_LONG_INT_64 1
@@ -1065,16 +1046,15 @@ LIBPORTS_BASE = [
     "src/port/strlcat.c",
     "src/port/strlcpy.c",
     "src/port/tar.c",
+    "src/port/user.c",
 ]
 
 LIBPORTS_LINUX = [
     "src/port/getpeereid.c",
-    "src/port/thread.c",
 ]
 
 LIBPORTS_MACOS = [
     "src/port/explicit_bzero.c",
-    "src/port/thread.c",
 ]
 
 LIBPORTS_WINDOWS = [
@@ -1145,6 +1125,7 @@ LIBCOMMON_WINDOWS = [
 LIBPQ_BASE = [
     "src/interfaces/libpq/fe-auth-scram.c",
     "src/interfaces/libpq/fe-auth.c",
+    "src/interfaces/libpq/fe-cancel.c",
     "src/interfaces/libpq/fe-connect.c",
     "src/interfaces/libpq/fe-exec.c",
     "src/interfaces/libpq/fe-lobj.c",
@@ -1174,7 +1155,7 @@ cc_library(
         "@platforms//os:macos": LIBPQ_BASE + LIBPQ_NOT_WINDOWS + LIBCOMMON_BASE + LIBCOMMON_NOT_WINDOWS + LIBPORTS_BASE + LIBPORTS_MACOS,
         "@platforms//os:windows": LIBPQ_BASE + LIBPQ_WINDOWS + LIBCOMMON_BASE + LIBCOMMON_WINDOWS + LIBPORTS_BASE + LIBPORTS_WINDOWS,
     }),
-    implementation_deps = [
+    deps = [
         ":include",
     ],
     linkopts = select({
